--- a/bib/tex.bib
+++ b/bib/tex.bib
@@ -42,11 +42,14 @@ year={2017},
 organization={Springer}
 }
 
-@article{余法红2007软件项目中的可行性分析方法研究,
-  title={软件项目中的可行性分析方法研究},
-  author={余法红 and 崔华 and 杨开英},
-  journal={福建电脑},
-  number={3},
-  pages={2},
-  year={2007},
+
+@article{余法红 2007 软件项目中的可行性分析方法研究 ,
+author={余法红 and 崔华 and 杨开英},
+title={ 软件项目中的可行性分析方法研究 },
+journal={福建电脑},
+year={2007},
+volume={},
+number={3},
+pages={65-66},
+month={1},
 }
