社会可行性

--- a/bib/tex.bib
+++ b/bib/tex.bib
@@ -43,7 +43,7 @@ organization={Springer}
 }
 
 
-@article{余法红 2007 软件项目中的可行性分析方法研究 ,
+@article{软件项目中的可行性分析方法研究,
 author={余法红 and 崔华 and 杨开英},
 title={ 软件项目中的可行性分析方法研究 },
 journal={福建电脑},
