--- a/main.tex
+++ b/main.tex
@@ -66,9 +66,33 @@
 \chapter{跨膜态搜索系统需求分析}
 \section{本章概要}
 \section{系统可行性分析}
+对软件系统的可行性分析是软件开发流程中不可或缺的一部分。可行性分析主要对即将进行开发的软件项目
+在技术、经济和社会因素方面进行可行性的评估，目的是为了合理的制定目标和论证选定设计方案的理由。\cite{软件项目中的可行性分析方法研究}
+本文主要从技术、经济、社会和操作四个角度对本系统进行了研究与分析，分析结果显示本系统的方案可行且具备一定的经济效益和社会效益。
+
+
 \subsection{技术可行性}
+基于知识图谱的文本-视频跨膜态搜索系统主要应用场景在Web端。得益于近年来互联网技术的发展，各种Web技术蓬勃发展、体系日渐完善，
+本文服务端采用Python语言，使用Django框架编写服务端功能。使用JavaScript语言和Vue前端框架来完成UI的功能实现。
+由于Python语言开发的机器学习相关算法的生态比较成熟，所以本文语言识别和知识图谱相关的算法实现也采用Python。而且这些算法
+在学术界都有丰富可靠的理论研究。尤其有如TensorFlow、Pytorch等框架的出现给机器学习算法的实现降低了门槛，并有活跃的社区可供开发人员参考和学习，
+为项目的敏捷开发和快速迭代起到了关键作用。综上所述本文所设计的系统在技术上可行。
+
 \subsection{经济可行性}
+经济可行性分析是指一个新的软件开发项目在经济角度评估是否可行，它主要是投入产出比（ROI）的分析。本文系统采用的技术均是开源的框架技术及开源
+数据库，所以主要是人力和时间成本，对于提供视频内容业务的互联网企业来说，其成本在可控范围内。而且本文的系统弥补了目前市场视频跨膜态搜索的一个缺口，
+因此在经济上是有巨大盈利的期望的。所以本文所设计的系统在经济上可行。
+
 \subsection{社会可行性}
+社会环境的可行性包括了两种因素：市场与政策。\cite{软件项目中的可行性分析方法研究}
+
+其中市场又可以分为未成熟的市场、成熟的市场和将要消亡的市场，
+政策主要涉及到法律和知识产权。
+
+环境分析就是明确系统的目的和限制条件：使用单位的状况、经营方针和组织机构、使用单位
+的计算机利用情况：相关的硬件、软件及其它接口部分；用户的
+操作环境及操作要求；习惯、法律、制度上对软件的制约；开发能
+具备的基数条件和设备条件。
 
 
 
